Changes for Java8